--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mysql2": "^3.0.1",
     "pug": "^3.0.2",
     "qs": "^6.11.0",
+    "request-promise": "^4.2.6",
     "sanitize": "^2.1.2",
     "sanitize-html": "^2.8.1",
     "sass": "^1.45.2",
