--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "csurf": "^1.11.0",
     "date-and-time": "^2.4.2",
     "date-utils": "^1.2.21",
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.17.2",
     "express-rate-limit": "^6.7.0",
@@ -40,6 +41,7 @@
     "localtunnel": "^2.0.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.0.1",
+    "nodemailer": "^6.9.1",
     "pm2": "^5.2.2",
     "pug": "^3.0.2",
     "qs": "^6.11.0",
