--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "fs": "^0.0.1-security",
     "helmet": "^6.0.1",
     "localtunnel": "^2.0.2",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.0.1",
     "nodemailer": "^6.9.1",
