--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "pm2": "^5.2.2",
     "pug": "^3.0.2",
     "qs": "^6.11.0",
+    "request": "^2.88.2",
     "request-promise": "^4.2.6",
     "sanitize": "^2.1.2",
     "sanitize-html": "^2.8.1",
@@ -65,7 +66,7 @@
     "gulp-csso": "^4.0.1",
     "gulp-postcss": "^9.0.1",
     "gulp-sass": "^5.1.0",
-    "nodemon": "^2.0.15",
+    "nodemon": "^2.0.20",
     "postcss": "^8.4.5",
     "postcss-cli": "^9.1.0"
   },
